--- a/carecompass/templates/registration/login.html
+++ b/carecompass/templates/registration/login.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+<section class="section-spacer">
+  <div class="container auth-wrap">
+    <h1 class="auth-title text-center mb-3">Welcome Back</h1>
+    <p class="text-center text-white-50 mb-4">Log in to continue your journey with CareCompass.</p>
 
-</body>
-</html>
+    <div class="auth-card">
+      <form method="post" novalidate>
+        {% csrf_token %}
+        {{ form.non_field_errors }}
+        {{ form.as_p }}
+        <button class="btn btn-neo w-100 mt-2" type="submit">
+          <i class="bi bi-box-arrow-in-right"></i> Login
+        </button>
+      </form>
+      <p class="mt-3 text-center text-white-50">
+        New here?
+        <a class="text-decoration-none" href="{% url 'register' %}">Create an account</a>
+Md. M
