--- a/carecompass/templates/registration/login.html
+++ b/carecompass/templates/registration/login.html
@@ -10,11 +10,9 @@
         {% csrf_token %}
         {{ form.non_field_errors }}
         {{ form.as_p }}
-        <button class="btn btn-neo w-100 mt-2" type="submit">
-          <i class="bi bi-box-arrow-in-right"></i> Login
-        </button>
+        <button type="submit" class="btn btn-primary w-100 mt-3">Login</button>
       </form>
-      <p class="mt-3 text-center text-white-50">
-        New here?
-        <a class="text-decoration-none" href="{% url 'register' %}">Create an account</a>
-Md. M
+    </div>
+  </div>
+</section>
+{% endblock %}
